syntax = "proto2";

package stremio.core.types;

option java_package = "com.stremio.core.types.addon";

message ResourceRequest{
  required string base = 1;
  required ResourcePath path = 2;
}

message ResourcePath {
  required string resource = 1;
  required string type = 2;
  required string id = 3;
  repeated ExtraValue extra = 4;
}

message ExtraValue{
  required string name = 1;
  required string value = 2;
}

enum ResourceType {
  meta = 0;
  stream = 1;
  subtitles = 2;
  catalog = 3;
}

enum ExtraValueType {
  skip = 0;
  search = 1;
  genre = 2;
}